--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "karma start build/karma.conf.js --single-run"
   },
   "dependencies": {
-    "vue": "^1.0.15"
+    "vue": "^1.0.15",
+    "vue-async-data": "^1.0.2",
+    "vue-resource": "^0.7.0",
+    "vue-router": "^0.7.10"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
